--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+coverage
 dist
 dist-ssr
 *.local
-
 
 # Editor directories and files
 .vscode/*
@@ -23,7 +23,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-
-# Ajoutés à la main
-coverage
+test-report.xml
