--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
-sonar.projectKey=julietterssgnl_marvel-app
-sonar.organization=julietterssgnl
+sonar.projectKey=but-sd_marvel-app-demo-2024
+sonar.organization=but-sd
 
+sonar.sources=src
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-sonar.coverage.exclusions=**/*.test.jsx
+sonar.coverage.exclusions=**/*.test.js, **/*.test.jsx, src/App.jsx, src/Layout.jsx, src/main.jsx, src/routes.jsx
