--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=but-sd_marvel-app-demo-2024
-sonar.organization=but-sd
+sonar.projectKey=marvel-app
+sonar.organization=ArthurRouvreau
 
 sonar.sources=src
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
