--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,7 +1,12 @@
 name: Quality
 on:
   push:
+    branches-ignore:
+      - dependabot/**
   pull_request:
+    branches-ignore:
+      - dependabot/**
+  
 jobs:
   sonarcloud:
     name: SonarCloud
